--- a/contacts.html
+++ b/contacts.html
@@ -32,7 +32,7 @@
             border-radius: 3px;">+23038534953</p>
             <label>E-mail:</label> <p style="border: 2px solid #000000;
             padding: 6px;
-            border-radius: 3px;">anton@gmail.com drrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr hfdvbkhevbf fdhkfbdkfbjk dhdvfkdsfb dfv ggdb dgb e erd ed  eet errr  rfgvdvdfbdfbsbfdsdfsbsfdbfdsbsdfbbd rr     rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr ttttttttttttttttt ttttttttttttt ttttttttttttttttt tttttttt ttt tt t t t tttttttttttttttttttttttttttttttt tttttttttttttttttttttttttt tttttttttttttttttttttttttttttttttttt ttttttttttttttttttttttttt ttttttttttttttttttttttttttttt tttttttttttttttttttttttttt tttttttttttttttttttttttttttttttttt </p>
+            border-radius: 3px;"">anton@gmail.com dfhvrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr hfdvbkhevbf fdhkfbdkfbjk dhdvfkdsfb dfv ggdb dgb e erd ed  eet errr  r rr     rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr ttttttttttttttttt ttttttttttttt ttttttttttttttttt tttttttt ttt tt t t t tttttttttttttttttttttttttttttttt tttttttttttttttttttttttttt tttttttttttttttttttttttttttttttttttt ttttttttttttttttttttttttt ttttttttttttttttttttttttttttt tttttttttttttttttttttttttt tttttttttttttttttttttttttttttttttt </p>
             <label>Position:</label> <p style="border: 2px solid #000000;
             padding: 6px;
             border-radius: 3px;">Senior Anton in Anton&Co. Industries</p>
@@ -40,7 +40,15 @@
 
         
             <button id="back">Back</button>
-        </div>
+    </div>
+        
+
+    <script>
+        let back = document.getElementById("back");
+        back.addEventListener("click", async (event) => {
+            window.location.href = "https://carrion626.github.io/home.html";
+        })
+    </script>
 
 </body>
 </html>
