--- a/presentation.html
+++ b/presentation.html
@@ -20,7 +20,7 @@
         <h1>Some names of speakers</h1>
         <button class="speaker" data-pdf="Pre-Test.pdf">Dmytro Seleba</button>
         <button class="speaker" data-pdf="my_resume_n.pdf">Andrii Zabolotnyi</button>
-        <button class="speaker" data-pdf="Pre-Test.pdf">Oksana Prychepenska</button>
+        <button class="speaker" data-pdf="Pre-Test.pdf">Oksana PrychepenskA</button>
         
         <button id="back" style="position: fixed;
         bottom: 20px;
