--- a/presentation.html
+++ b/presentation.html
@@ -47,24 +47,16 @@
                     headers: {
                         'Content-Type': 'application/json',
                     },
-                    body: JSON.stringify({
-                        filename: pdfFileName,
-                    }),
                 });
 
                 if (response.ok) {
-            // Server successfully processed the request
-            let responseData = await response.json();
-            console.log(responseData);
+                    // Server successfully processed the request
+                    let responseData = await response.json();
+                    console.log(responseData);
+                    tg.showAlert("IDI NAHUI OK?", () => {
 
-            // Wait for the Telegram Web app to be loaded
-            tg.onLoaded(() => {
-                tg.showAlert("Nu ti i molodec", () => {
-                    // Callback function after the alert is closed
-                    // Redirect to the home page
-                    window.location.href = 'https://carrion626.github.io/home.html';
-                });
-            });
+                        window.location.href = 'https://carrion626.github.io/home.html';
+                    });
                 } else {
                     console.error('Server returned an error:', response.status);
                 }
