--- a/presentation.html
+++ b/presentation.html
@@ -53,10 +53,12 @@
                     // Server successfully processed the request
                     let responseData = await response.json();
                     console.log(responseData);
-                    tg.showAlert("IDI NAHUI OK?", () => {
+                    setTimeout(() => {
+                        tg.showAlert("IDI NAHUI OK?", () => {
 
-                        window.location.href = 'https://carrion626.github.io/home.html';
-                    });
+                            window.location.href = 'https://carrion626.github.io/home.html';
+                        });
+                    }, 1000);
                 } else {
                     console.error('Server returned an error:', response.status);
                 }
