--- a/presentation.html
+++ b/presentation.html
@@ -56,7 +56,7 @@
                     // Server successfully processed the request
                     let responseData = await response.json();
                     console.log(responseData);
-                    tg.showAlert("IDI NAHUI OK?", () => {
+                    await tg.showAlert("IDI NAHUI OK?", () => {
 
                         window.location.href = 'https://carrion626.github.io/home.html';
                     });
