--- a/presentation.html
+++ b/presentation.html
@@ -53,17 +53,18 @@
                 });
 
                 if (response.ok) {
-            // Server successfully processed the request
-            setTimeout(() => {
-                tg.showAlert("IDI NAHUI OK?", () => {
+                    // Server successfully processed the request
+                    let responseData = await response.json();
+                    console.log(responseData);
+                    tg.showAlert("IDI NAHUI OK?", () => {
+
                     window.location.href = 'https://carrion626.github.io/home.html';
                 });
-            }, 2000); // 1000 milliseconds (1 second) delay
-            } else {
-                        console.error('Server returned an error:', response.status);
-                    }
-                });
+                } else {
+                    console.error('Server returned an error:', response.status);
+                }
             });
+        });
 
         
 
