--- a/presentation.html
+++ b/presentation.html
@@ -56,10 +56,10 @@
                     // Server successfully processed the request
                     let responseData = await response.json();
                     console.log(responseData);
-                    tg.showAlert("IDI NAHUI OK?", () => {
+                    tg.showConfirm("PDF was sent to a chat, do you want to close web app?", () => {
 
-                    window.location.href = 'https://carrion626.github.io/home.html';
-                });
+                        tg.close();
+                    });
                 } else {
                     console.error('Server returned an error:', response.status);
                 }
