--- a/contacts.html
+++ b/contacts.html
@@ -21,21 +21,21 @@
         </div>
             <h1>CONTACT US</h1>
             <h1>OR NOT</h1>
-            <label>Name:</label> <p style="border: 2px solid #000000;
-            padding: 6px;
-            border-radius: 3px;">Anton</p>
-            <label>Surname:</label> <p style="border: 2px solid #000000;
-            padding: 6px;
-            border-radius: 3px;">Grigorievich</p>
-            <label>Telephone:</label> <p style="border: 2px solid #000000;
-            padding: 6px;
-            border-radius: 3px;">+23038534953</p>
-            <label>E-mail:</label> <p style="border: 2px solid #000000;
-            padding: 6px;
-            border-radius: 3px;">anton@gmail.com dfhvrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr hfdvbkhevbf fdhkfbdkfbjk dhdvfkdsfb dfv ggdb dgb e erd ed  eet errr  r rr     rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr ttttttttttttttttt ttttttttttttt ttttttttttttttttt tttttttt ttt tt t t t tttttttttttttttttttttttttttttttt tttttttttttttttttttttttttt tttttttttttttttttttttttttttttttttttt ttttttttttttttttttttttttt ttttttttttttttttttttttttttttt tttttttttttttttttttttttttt tttttttttttttttttttttttttttttttttt </p>
-            <label>Position:</label> <p style="border: 2px solid #000000;
-            padding: 6px;
-            border-radius: 3px;">Senior Anton in Anton&Co. Industries</p>
+            <label style="display: flex; margin: 1px;">Name:</label> <p style="border: 2px solid #000000;
+            padding: 5px;
+            border-radius: 3px; display: flex;">Anton</p>
+            <label style="display: flex; margin: 1px;">Surname:</label> <p style="border: 2px solid #000000;
+            padding: 5px;
+            border-radius: 3px; display: flex;">Grigorievich</p>
+            <label style="display: flex; margin: 1px;">Telephone:</label> <p style="border: 2px solid #000000;
+            padding: 5px;
+            border-radius: 3px; display: flex;">+23038534953</p>
+            <label style="display: flex; margin: 1px;">E-mail:</label> <p style="border: 2px solid #000000;
+            padding: 5px;
+            border-radius: 3px; display: flex;">anton@gmail.com dfhvrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr hfdvbkhevbf fdhkfbdkfbjk dhdvfkdsfb dfv ggdb dgb e erd ed  eet errr  r rr     rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr ttttttttttttttttt ttttttttttttt ttttttttttttttttt tttttttt ttt tt t t t tttttttttttttttttttttttttttttttt tttttttttttttttttttttttttt tttttttttttttttttttttttttttttttttttt ttttttttttttttttttttttttt ttttttttttttttttttttttttttttt tttttttttttttttttttttttttt tttttttttttttttttttttttttttttttttt </p>
+            <label style="display: flex; margin: 1px;">Position:</label> <p style="border: 2px solid #000000;
+            padding: 5px;
+            border-radius: 3px; display: flex;">Senior Anton in Anton&Co. Industries</p>
         
             <button id="back">Back</button>
     </div>
