--- a/presentation.html
+++ b/presentation.html
@@ -55,7 +55,7 @@
                 if (response.ok) {
                     // await new Promise(resolve => setTimeout(resolve, 2000));
                     
-                    tg.showConfirm("PDF was sent to a chat, do you want to close web app?", (confirmed) => {
+                    tg.showConfirm("PDF was sent to a chat, do you want to continue using web app?", (confirmed) => {
                         if (confirmed) {
                             // User pressed 'OK'
                             window.location.href = 'https://carrion626.github.io/home.html';
