--- a/reg2.html
+++ b/reg2.html
@@ -26,8 +26,10 @@
             <input type="text" id="city" placeholder="City" >
             <input type="text" id="school" placeholder="school" >
             <input type="text" id="position" placeholder="position">
-            <button id="register">Register</button>
-            <button id="back">Back</button>
+            <div class="button-container">
+                <button id="back">Back</button>
+                <button id="register">Register</button>
+            </div>
         </form>
     </div>
 
