--- a/route.html
+++ b/route.html
@@ -18,11 +18,11 @@
             <img src="images/logo.jpg" alt="Huyatina Image">
         </div>
         <h1>Route</h1>
-        <img src="images/fhfhfh.jpeg" class="zoomable-image">
-        <img src="images/fhfhfh.jpeg" class="zoomable-image">
-        <img src="images/fhfhfh.jpeg" class="zoomable-image">        
-        <img src="images/fhfhfh.jpeg" class="zoomable-image">
-        <img src="images/fhfhfh.jpeg" class="zoomable-image">
+        <img src="images/fhfhfh.jpeg" class="zoomable-image" id="contectimg">
+        <img src="images/fhfhfh.jpeg" class="zoomable-image" id="contectimg">
+        <img src="images/fhfhfh.jpeg" class="zoomable-image" id="contectimg">        
+        <img src="images/fhfhfh.jpeg" class="zoomable-image" id="contectimg">
+        <img src="images/fhfhfh.jpeg" class="zoomable-image" id="contectimg">
         <div class="button-container">
             <button id="back">Back</button>
             <button id="map">Map</button>
