--- a/schedule.html
+++ b/schedule.html
@@ -18,11 +18,11 @@
             <img src="images/logo.jpg" alt="Huyatina Image">
         </div>
         <h1>Schedule</h1>
-        <img src="images/check2.jpg" class="zoomable-image">
-        <img src="images/tocheck.jpg" class="zoomable-image">
-        <img src="images/zalupa.png" class="zoomable-image">
-        <img src="images/ысрувгду.jpg" class="zoomable-image">
-        <img src="images/tocheck.jpg" class="zoomable-image">
+        <img src="images/check2.jpg" class="zoomable-image" id="contectimg">
+        <img src="images/tocheck.jpg" class="zoomable-image" id="contectimg">
+        <img src="images/zalupa.png" class="zoomable-image" id="contectimg">
+        <img src="images/ысрувгду.jpg" class="zoomable-image" id="contectimg">
+        <img src="images/tocheck.jpg" class="zoomable-image" id="contectimg">
         <button id="back">Back</button>
     </div>
 
