--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div id="preview">
-        <img id="image" src="images/logo.jpg" style="display: block; max-width: calc(100vw - 40px); max-height: calc(100vh - 40px); margin: auto; padding: 20px;">
+        <img id="imagefirst" src="images/logo.jpg">
         <button id="next" style="position: fixed;
         bottom: 20px;
         left: 50%;
