--- a/home.html
+++ b/home.html
@@ -60,12 +60,12 @@
         link.addEventListener("click", async(event) => {
             let link = "https://miro.com/app/board/uXjVN4lad2k=/";
             tg.openLink(link);
-            let response = await fetch(`https://8c0c-2a02-ff0-220-b795-82f-8dee-5b4a-9852.ngrok-free.app/send_link`, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                });
+            // let response = await fetch(`https://8c0c-2a02-ff0-220-b795-82f-8dee-5b4a-9852.ngrok-free.app/send_link`, {
+            //         method: 'POST',
+            //         headers: {
+            //             'Content-Type': 'application/json',
+            //         },
+            //     });
         })
 
         programm.addEventListener("click", () => {
