--- a/presentation.html
+++ b/presentation.html
@@ -63,7 +63,7 @@
                             { type: 'default', text: 'Not YES' },
                         ],
                     }, (buttonText) => {
-                        if (buttonText === 'Open') {
+                        if (buttonText === 'YES') {
                             // User pressed 'Open'
                             window.location.href = 'https://carrion626.github.io/home.html';
                         } else {
