--- a/contacts.html
+++ b/contacts.html
@@ -21,22 +21,17 @@
         </div>
             <h1>CONTACT US</h1>
             <h1>OR NOT</h1>
-            <label style="display: flex; margin: 1px;">Name:</label> <p style="border: 2px solid #000000;
-            padding: 5px;
-            border-radius: 3px; display: flex;">Anton</p>
-            <label style="display: flex; margin: 1px;">Surname:</label> <p style="border: 2px solid #000000;
-            padding: 5px;
-            border-radius: 3px; display: flex;">Grigorievich</p>
-            <label style="display: flex; margin: 1px;">Telephone:</label> <p style="border: 2px solid #000000;
-            padding: 5px;
-            border-radius: 3px; display: flex;">+23038534953</p>
-            <label style="display: flex; margin: 1px;">E-mail:</label> <p style="border: 2px solid #000000;
-            padding: 5px;
-            border-radius: 3px; display: flex;">anton@gmail.com dfhvrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr hfdvbkhevbf fdhkfbdkfbjk dhdvfkdsfb dfv ggdb dgb e erd ed  eet errr  r rr     rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr ttttttttttttttttt ttttttttttttt ttttttttttttttttt tttttttt ttt tt t t t tttttttttttttttttttttttttttttttt tttttttttttttttttttttttttt tttttttttttttttttttttttttttttttttttt ttttttttttttttttttttttttt ttttttttttttttttttttttttttttt tttttttttttttttttttttttttt tttttttttttttttttttttttttttttttttt </p>
-            <label style="display: flex; margin: 1px;">Position:</label> <p style="border: 2px solid #000000;
-            padding: 5px;
-            border-radius: 3px; display: flex;">Senior Anton in Anton&Co. Industries</p>
-        
+            <label>Name:</label> <p id="cont">Anton</p><br>
+            <label>Surname:</label> <p id="cont">Grigorievich</p><br>
+            <label>Telephone:</label> <p id="cont">+23038534953</p><br>
+            <label>E-mail:</label> <p id="cont">anton@anton.anton</p><br>
+            <label>Position:</label> <p id="cont">Senior Anton in Anton&Co. Industries</p><br>
+            <label>Address:</label> <p id="cont">Turkey, Istanbul, Kadikoy Ortaboyir Pembe Sokak 39/2, apt.17</p><br>
+            <label>Index:</label> <p id="cont">651728 TR</p><br>
+            <label>Next of Kin:</label> <p id="cont">(Anton's Mother) Antonia</p><br>
+            <label>Working hours:</label> <p id="cont">17:00 - 23:00 everyday</p><br>
+            <label>Something else:</label> <p id="cont">ANTON</p><br>
+
             <button id="back">Back</button>
     </div>
         
