--- a/presentation.html
+++ b/presentation.html
@@ -29,6 +29,8 @@
     </div>
 
     <script>
+        var BackButton = WebApp.BackButton;
+        BackButton.hide()
         let back = document.getElementById("back");
         let speakers = document.querySelectorAll(".speaker");
         let tg = window.Telegram.WebApp;
