--- a/presentation.html
+++ b/presentation.html
@@ -29,6 +29,7 @@
     </div>
 
     <script>
+        // HIDIND BACCKKK BUTTTTOONNNN
         var BackButton = WebApp.BackButton;
         BackButton.hide()
         let back = document.getElementById("back");
