--- a/presentation.html
+++ b/presentation.html
@@ -29,9 +29,7 @@
     </div>
 
     <script>
-        // HIDIND BACCKKK BUTTTTOONNNN
-        var BackButton = WebApp.BackButton;
-        BackButton.hide()
+        Telegram.WebApp.BackButton.hide();
         let back = document.getElementById("back");
         let speakers = document.querySelectorAll(".speaker");
         let tg = window.Telegram.WebApp;
