--- a/schedule.html
+++ b/schedule.html
@@ -15,7 +15,7 @@
 
     <div id="sch">
         <div class="image-frame">
-            <img src="images/logo.jpg" alt="Huyatina Image">
+            <img src="images/notlogo.jpg" alt="Huyatina Image">
         </div>
         <h1>Schedule</h1>
         <img src="images/check2.jpg" class="zoomable-image" id="contectimg">
