--- a/route.html
+++ b/route.html
@@ -15,14 +15,14 @@
 
     <div id="rt">
         <div class="image-frame">
-            <img src="images/logo.jpg" alt="Huyatina Image">
+            <img src="images/notlogo.jpg" alt="Huyatina Image">
         </div>
         <h1>Route</h1>
-        <img src="images/fhfhfh.jpeg" class="zoomable-image" id="contectimg">
-        <img src="images/fhfhfh.jpeg" class="zoomable-image" id="contectimg">
-        <img src="images/fhfhfh.jpeg" class="zoomable-image" id="contectimg">        
-        <img src="images/fhfhfh.jpeg" class="zoomable-image" id="contectimg">
-        <img src="images/fhfhfh.jpeg" class="zoomable-image" id="contectimg">
+        <img src="images/r2.jpg" class="zoomable-image" id="contectimg">
+        <img src="images/route2.png" class="zoomable-image" id="contectimg">
+        <img src="images/route3.jpg" class="zoomable-image" id="contectimg">        
+        <img src="images/r3.png" class="zoomable-image" id="contectimg">
+        <img src="" class="zoomable-image" id="contectimg">
         <div class="button-container">
             <button id="back">Back</button>
             <button id="map">Map</button>
