--- a/programm.html
+++ b/programm.html
@@ -15,7 +15,7 @@
 
     <div id="pgm">
         <div class="image-frame">
-            <img src="images/logo.jpg" alt="Huyatina Image">
+            <img src="images/notlogo.jpg" alt="Huyatina Image">
         </div>
         <h1>Programm</h1>
         <p id="programmText" style="text-align: left;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque scelerisque rutrum urna, sed blandit nulla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Aenean eu pulvinar velit. Ut sem neque, pellentesque in mauris vel, blandit vulputate velit. Nunc ut lectus felis. Nam purus ex, auctor quis urna sed, tincidunt egestas augue. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent interdum pretium est quis feugiat. Aenean in eros convallis velit venenatis pharetra. Quisque urna neque, finibus nec justo pharetra, viverra semper elit. Donec condimentum lacus sit amet orci scelerisque, eget molestie libero vulputate. Etiam ut arcu a lorem egestas facilisis. Sed nec erat quis risus rhoncus pulvinar ac non sem. Nulla nulla libero, vehicula non magna ac, bibendum ullamcorper leo.
@@ -23,11 +23,11 @@
             Aliquam at augue vel velit euismod faucibus non ut dui. Aenean sem libero, ultrices a est sed, efficitur vestibulum purus. Phasellus porttitor condimentum sapien, vel maximus dolor maximus in. Etiam eu velit a massa porttitor placerat. Morbi aliquet, magna ut malesuada fermentum, neque arcu tincidunt mauris, facilisis congue sem massa ac urna. Morbi vulputate tempor odio, ut gravida elit. Pellentesque pretium ex risus, eu fringilla leo molestie quis.            
             Aenean aliquet a erat et fermentum. Suspendisse libero sapien, ornare sit amet justo et, tempus malesuada tortor. Phasellus lobortis leo pellentesque quam consectetur laoreet. In dapibus vel enim eget commodo. Praesent molestie laoreet lobortis. Integer venenatis sed quam in volutpat. Quisque vel massa feugiat urna sagittis dapibus sit amet ac purus. Proin arcu ex, efficitur at lorem et, lobortis tincidunt ante. Donec efficitur tellus eget lacus suscipit, non volutpat sem varius. Duis venenatis convallis velit. Mauris maximus justo leo, at varius magna mollis ac. Maecenas lobortis imperdiet dui sit amet vestibulum. Phasellus gravida tellus est, sed mattis quam tincidunt et. Pellentesque gravida hendrerit imperdiet. Ut pretium purus non sapien rutrum aliquam.</p>
         <hr style="border: 0; height: 1px; background-color: #ccc; margin: 30px 0;">
-        <img src="images/fhfhfh.jpeg" class="zoomable-image" id="contectimg">
-        <img src="images/fhfhfh.jpeg" class="zoomable-image" id="contectimg">
-        <img src="images/fhfhfh.jpeg" class="zoomable-image" id="contectimg">        
-        <img src="images/fhfhfh.jpeg" class="zoomable-image" id="contectimg">
-        <img src="images/fhfhfh.jpeg" class="zoomable-image" id="contectimg">
+        <img src="images/prog1.jpg" class="zoomable-image" id="contectimg">
+        <img src="images/prog2.jpg" class="zoomable-image" id="contectimg">
+        <img src="images/prog3.jpg" class="zoomable-image" id="contectimg">        
+        <img src="images/prog4.jpg" class="zoomable-image" id="contectimg">
+        <img src="images/prog5.jpg" class="zoomable-image" id="contectimg">
         
         <button id="back">Back</button>
     </div>
