--- a/contacts.html
+++ b/contacts.html
@@ -15,10 +15,11 @@
 </head>
 <body>
 
-    <div id="cts">
+    
         <div class="image-frame">
-            <img src="images/logo.jpg" alt="Huyatina Image">
+            <img src="images/notlogo.jpg" alt="Huyatina Image">
         </div>
+        <div id="cts">
             <h1>CONTACT US</h1>
             <h1>OR NOT</h1>
             <label>Name:</label> <p id="cont">Anton</p><br>
