--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
     <div id="first_reg" style="display: none;">
-        <div class="image-frame">
+        <div class="main-image-frame">
             <img src="images/logo.jpg" alt="Huyatina Image">
         </div>
         <h1>Dentist Event</h1>
