--- a/reg2.html
+++ b/reg2.html
@@ -13,7 +13,7 @@
 <body>
 
     <div id="second_reg">
-        <div class="image-frame">
+        <div class="main-image-frame">
             <img src="images/logo.jpg" alt="Huyatina Image">
         </div>
         <h1>Dentist Event</h1>
