--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="home">
-        <div class="image-frame">
+        <div class="main-image-frame">
             <img src="images/logo.jpg" alt="Huyatina Image">
         </div>
         <h1>Home Page</h1>
