--- a/presentation.html
+++ b/presentation.html
@@ -14,7 +14,7 @@
 
     <div id="pr">
         <div class="image-frame">
-            <img src="images/logo.jpg" alt="Huyatina Image">
+            <img src="images/notlogo.jpg" alt="Huyatina Image">
         </div>
         <h1>Presentations</h1>
         <h1>Some names of speakers</h1>
@@ -22,10 +22,7 @@
         <button class="speaker" data-pdf="my_resume_n.pdf">Andrii Zabolotnyi</button>
         <button class="speaker" data-pdf="Pre-Test.pdf">Oksana PrychepenskA</button>
         
-        <button id="back" style="position: fixed;
-        bottom: 20px;
-        left: 50%;
-        transform: translateX(-50%);">Back</button>
+        <button id="back">Back</button>
     </div>
 
     <script>
