--- a/presentation.html
+++ b/presentation.html
@@ -39,6 +39,25 @@
             BackButton.hide();
         });
 
+        tg.expand(); //расширяем на все окно  
+
+        tg.MainButton.text = "Changed Text"; //изменяем текст кнопки 
+        tg.MainButton.setText("Changed Text1"); //изменяем текст кнопки иначе
+        tg.MainButton.textColor = "#F55353"; //изменяем цвет текста кнопки
+        tg.MainButton.color = "#143F6B"; //изменяем цвет бэкграунда кнопки
+        tg.MainButton.setParams({"color": "#143F6B"}); //так изменяются все параметры 
+
+        btn.addEventListener('click', function(){ //вешаем событие на нажатие html-кнопки
+            if (tg.MainButton.isVisible){ //если кнопка показана 
+                tg.MainButton.hide() //скрываем кнопку 
+            }
+        else{ //иначе
+            tg.MainButton.show() //показываем 
+        }
+        });
+
+
+
         document.addEventListener('DOMContentLoaded', function() {
             window.Telegram.WebApp.BackButton.hide();
                 })
