--- a/presentation.html
+++ b/presentation.html
@@ -46,15 +46,8 @@
         tg.MainButton.textColor = "#F55353"; //изменяем цвет текста кнопки
         tg.MainButton.color = "#143F6B"; //изменяем цвет бэкграунда кнопки
         tg.MainButton.setParams({"color": "#143F6B"}); //так изменяются все параметры 
+        tg.MainButton.show()
 
-        btn.addEventListener('click', function(){ //вешаем событие на нажатие html-кнопки
-            if (tg.MainButton.isVisible){ //если кнопка показана 
-                tg.MainButton.hide() //скрываем кнопку 
-            }
-        else{ //иначе
-            tg.MainButton.show() //показываем 
-        }
-        });
 
 
 
