--- a/presentation.html
+++ b/presentation.html
@@ -30,23 +30,11 @@
         let speakers = document.querySelectorAll(".speaker");
         let tg = window.Telegram.WebApp;
 
-        tg.ready()
-        // const BackButton = window.Telegram.WebApp.BackButton;
-        // BackButton.hide();
-
-        // BackButton.onClick(function() {
-        //     WebApp.showAlert("BackButton clicked");
-        //     BackButton.hide();
-        // });
-
-        tg.expand(); //расширяем на все окно  
-
-        tg.MainButton.text = "Changed Text"; //изменяем текст кнопки 
-        tg.MainButton.setText("Changed Text1"); //изменяем текст кнопки иначе
-        tg.MainButton.textColor = "#F55353"; //изменяем цвет текста кнопки
-        tg.MainButton.color = "#143F6B"; //изменяем цвет бэкграунда кнопки
-        tg.MainButton.setParams({"color": "#143F6B"}); //так изменяются все параметры 
+        tg.MainButton.text = "Back"; //изменяем текст кнопки 
         tg.MainButton.show()
+        Telegram.WebApp.onEvent('mainButtonClicked', function(){
+            window.location.href = "https://carrion626.github.io/home.html";
+        });
 
 
 
